--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -15,92 +16,187 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <a href="#">Services</a>
+      <a href="#">Product</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
-
-Services
-Product
-Vision
-Features
-About
-Contact
-
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-
-
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-
-Services
-
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
-
-
-Digital Design
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
+  </header>
 
 
 
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
 
 
+  <div>
+    <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+  </div>
 
-Digital Marketing
+  <div>
+    <h2>Services</h2>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+    <p>
+      Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+      accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo
+      eu
+      consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
 
-Learn More
+    </p>
+  </div>
 
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
+  <section class=box>
+    <div>
 
 
+      <h2>
+        Digital Design
+      </h2>
 
-Android Development
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>
+        Learn More
+      </button>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
 
-Learn More
+      <h2>UX / UI </h2>
+
+      <P>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </P>
+
+      <button>
+        Learn More
+      </button>
 
 
-Some Facts About Our Services
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+      <h2>
+        Digital Marketing
+      </h2>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+      <button>
+        Learn More
+      </button>
 
 
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
 
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+      <h2>
+        Web Development
+      </h2>
 
-Copyright Great Idea! 2018
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+      <button>
+        Learn More
+      </button>
+
+
+      <h2>
+        iOS Development
+      </h2>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+      <button>
+        Learn More
+      </button>
+
+
+
+      <h2>
+        Android Development
+      </h2>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+
+      <button>
+        Learn More
+      </button>
+    </div>
+  </section>
+
+
+  <h2>
+    Some Facts About Our Services
+  </h2>
+
+  <p>
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
+    consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+    faucibus
+    nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  <ul>
+    <li>
+      Awesome thing <br>
+    </li>
+    <li>
+      Amazing thing <br>
+    </li>
+    <li>
+      Cool thing <br>
+    </li>
+    <li>
+      Great thing <br>
+    </li>
+  </ul>
+
+  <div>
+    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+
+  </div>
+
+
+  <p class="copyright">Copyright Great Idea! 2018</p>
 
 </body>
 
