--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -37,7 +37,7 @@
     <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
   </div>
 
-  <div>
+  <div class="header">
     <h2>Services</h2>
 
     <p>
@@ -48,151 +48,172 @@
 
     </p>
   </div>
+  <hr>
 
   <section class=box>
-    <div>
+    <div class="boxes">
+
+      <div class="digital">
+
+        <h2>
+          Digital Design
+        </h2>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.
+        </p>
+        <button>
+          Learn More
+        </button>
+      </div>
+
+      <div class="ui">
+        <h2>UX / UI </h2>
+
+        <P>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.
+        </P>
+
+        <button>
+          Learn More
+        </button>
+      </div>
+
+      <div class="marketing">
+        <h2>
+          Digital Marketing
+        </h2>
+
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.
+        </p>
+
+        <button>
+          Learn More
+        </button>
+      </div>
+
+      <div class="web">
 
 
-      <h2>
-        Digital Design
-      </h2>
+        <h2>
+          Web Development
+        </h2>
 
-      <p>
-        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.
-      </p>
-      <button>
-        Learn More
-      </button>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.
+        </p>
 
-
-      <h2>UX / UI </h2>
-
-      <P>
-        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.
-      </P>
-
-      <button>
-        Learn More
-      </button>
+        <button>
+          Learn More
+        </button>
+      </div>
 
 
+      <div class="ios">
+        <h2>
+          iOS Development
+        </h2>
 
-      <h2>
-        Digital Marketing
-      </h2>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.
+        </p>
 
-      <p>
-        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.
-      </p>
+        <button>
+          Learn More
+        </button>
 
-      <button>
-        Learn More
-      </button>
+      </div>
 
+      <div class="android">
+        <h2>
+          Android Development
+        </h2>
 
-
-      <h2>
-        Web Development
-      </h2>
-
-      <p>
-        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.
-      </p>
-
-      <button>
-        Learn More
-      </button>
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.
+        </p>
 
 
-      <h2>
-        iOS Development
-      </h2>
-
-      <p>
-        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.
-      </p>
-
-      <button>
-        Learn More
-      </button>
-
-
-
-      <h2>
-        Android Development
-      </h2>
-
-      <p>
-        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-        Mauris
-        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-        faucibus
-        nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.
-      </p>
-
-
-      <button>
-        Learn More
-      </button>
+        <button>
+          Learn More
+        </button>
+      </div>
     </div>
   </section>
 
+  <div class="somefacts">
 
-  <h2>
-    Some Facts About Our Services
-  </h2>
+    <div class="bottomfacts">
 
-  <p>
-    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
-    consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-    faucibus
-    nibh pellentesque
-    eleifend. Mauris euismod facilisis iaculis.
-  </p>
-  <ul>
-    <li>
-      Awesome thing <br>
-    </li>
-    <li>
-      Amazing thing <br>
-    </li>
-    <li>
-      Cool thing <br>
-    </li>
-    <li>
-      Great thing <br>
-    </li>
-  </ul>
 
-  <div>
-    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+      <h2 class="facts">
+        Some Facts About Our Services
+      </h2>
+      <div class="factsP">
+        <p>
+          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris
+          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+          faucibus
+          nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.
+        </p>
+      </div>
 
+      <div class="bottomimg">
+
+
+        <ul>
+          <li>
+            Awesome thing <br>
+          </li>
+          <li>
+            Amazing thing <br>
+          </li>
+          <li>
+            Cool thing <br>
+          </li>
+          <li>
+            Great thing <br>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="serviceimg">
+      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+
+    </div>
   </div>
 
 
