--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -85,7 +85,7 @@
   <hr>
   <footer>
     <div class="contact">
-      <h2>Contact</h2>
+      <h2 id="contact">Contact</h2>
 
       <address>123 Way 456 Street <br>
         Somewhere, USA</address> <br>
