--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -51,125 +51,126 @@
   <hr>
 
   <section class=box>
-    <div class="boxes">
-
-      <div class="digital">
-
-        <h2>
-          Digital Design
-        </h2>
-
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris
-          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-          faucibus
-          nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.
-        </p>
-        <button>
-          Learn More
-        </button>
-      </div>
-
-      <div class="ui">
-        <h2>UX / UI </h2>
-
-        <P>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris
-          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-          faucibus
-          nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.
-        </P>
-
-        <button>
-          Learn More
-        </button>
-      </div>
-
-      <div class="marketing">
-        <h2>
-          Digital Marketing
-        </h2>
-
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris
-          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-          faucibus
-          nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.
-        </p>
-
-        <button>
-          Learn More
-        </button>
-      </div>
-
-      <div class="web">
 
 
-        <h2>
-          Web Development
-        </h2>
+    <div class="service-item">
 
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris
-          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-          faucibus
-          nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.
-        </p>
+      <h2>
+        Digital Design
+      </h2>
 
-        <button>
-          Learn More
-        </button>
-      </div>
-
-
-      <div class="ios">
-        <h2>
-          iOS Development
-        </h2>
-
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris
-          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-          faucibus
-          nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.
-        </p>
-
-        <button>
-          Learn More
-        </button>
-
-      </div>
-
-      <div class="android">
-        <h2>
-          Android Development
-        </h2>
-
-        <p>
-          Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
-          Mauris
-          consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
-          faucibus
-          nibh pellentesque
-          eleifend. Mauris euismod facilisis iaculis.
-        </p>
-
-
-        <button>
-          Learn More
-        </button>
-      </div>
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+      <button>
+        Learn More
+      </button>
     </div>
+
+    <div class="service-item">
+      <h2>UX / UI </h2>
+
+      <P>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </P>
+
+      <button>
+        Learn More
+      </button>
+    </div>
+
+
+    <div class="service-item">
+      <h2>
+        Digital Marketing
+      </h2>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+      <button>
+        Learn More
+      </button>
+    </div>
+
+    <div class="service-item">
+
+
+      <h2>
+        Web Development
+      </h2>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+      <button>
+        Learn More
+      </button>
+    </div>
+
+
+    <div class="service-item">
+      <h2>
+        iOS Development
+      </h2>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+      <button>
+        Learn More
+      </button>
+
+    </div>
+
+    <div class="service-item">
+      <h2>
+        Android Development
+      </h2>
+
+      <p>
+        Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+        Mauris
+        consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+        faucibus
+        nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.
+      </p>
+
+
+      <button>
+        Learn More
+      </button>
+    </div>
+
   </section>
 
   <div class="somefacts">
